--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ Primary Color (Black): #4a4a4a;
 Secondary colors (Green): #2A665A
 Secondary Color (orange): #DD8627;
 */
-
 * {
   box-sizing: border-box;
 }
@@ -17,12 +16,12 @@ body {
   font-weight: 300;
   line-height: 1.6;
   color: #4a4a4a;
-
 }
 
 h1, h2, h3, h4 {
   line-height: 1.4;
 }
+
 h1 {
   font-size: 1.8em;
   font-weight: 700;
@@ -34,36 +33,27 @@ h2 {
   font-size: 1.6em;
   font-weight: 700;
   text-align: center;
-  background: #ff9966;
-  color:black;
-  padding:10px;
+  background: #348a95;
+  color: black;
+  padding: 1px;
 }
-
 
 h3 {
   font-size: 1.4em;
   font-weight: 700;
-
-
-
 }
+
 h4 {
   font-size: 1.2em;
   font-weight: 400;
 }
 
-
-
-
-
-
 /*links*/
-
 a {
   color: #ff7f50;
 }
-
-a:visited { /* visited link */
+ a:visited {
+  /* visited link */
   color: #ff7f50;
 }
 
@@ -73,10 +63,10 @@ a:focus {
   text-decoration: none;
 }
 
-a:active { /* selected link */
+a:active {
+  /* selected link */
   color: #2a665a;
 }
-
 
 img {
   width: 100%;
@@ -84,8 +74,9 @@ img {
 
 .button {
   display: inline-block;
-  background-color: #ff7f50;
-  color: #ffffff !important; /* needed to override the default link color */
+  background-color: #db3b00;
+  color: #ffffff !important;
+  /* needed to override the default link color */
   font-weight: 400;
   padding: 10px;
   border-radius: 3px;
@@ -95,9 +86,10 @@ img {
   transition-duration: 0.2s;
   transition-property: opacity;
 }
-.button:hover
-.button.focus {
-  opacity: 0.8; /* Reduces the opacity of the button to 80% */
+
+.button:hover .button.focus {
+  opacity: 0.8;
+  /* Reduces the opacity of the button to 80% */
 }
 
 .button.contact {
@@ -105,9 +97,10 @@ img {
   color: #ff7f50 !important;
   text-transform: uppercase;
   border: 2px solid #ff7f50;
-width: 100%;
-text-align: center;
+  width: 100%;
+  text-align: center;
 }
+
 .button.contact:hover {
   background-color: #ff7f50;
   color: #ffffff !important;
@@ -115,15 +108,16 @@ text-align: center;
 
 .caption {
   font-style: italic;
+  text-align: center;
 }
-/*header*/
 
+/*header*/
 header {
   background-color: #C3E5E7;
   width: 100%;
-  padding:10px 0 4px;
-box-shadow: 4px 4px 5px 0 rgba(50, 50, 50, 0.25);
-position: fixed
+  padding: 10px 0 4px;
+  box-shadow: 4px 4px 5px 0 rgba(50, 50, 50, 0.25);
+  position: fixed
 }
 
 .navtoggle li .icon {
@@ -133,47 +127,48 @@ position: fixed
   font-size: 20px;
   padding-right: 0;
 }
+
 .logo {
-max-width:150px;
+  max-width: 150px;
 }
 
-nav > ul {
+nav>ul {
   list-style-type: none;
-padding: 0;
-margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
-
-
-nav > ul > li > a {
+nav>ul>li>a {
   padding: 0 10px;
   text-transform: uppercase;
   font-weight: 600;
   color: #ff7f50;
   font-size: 1.4em;
   text-decoration: none;
-
 }
 
-nav > ul > li > a: hover,
-nav > ul > li > a: focus{
+nav>ul>li>a:hover,
+nav>ul>li>a:focus {
   color: #697385;
-
 }
 
-nav > ul > li > a: active{
+nav>ul>li>a:active {
   color: #2a665a;
 }
+
 .navtoggle li:not(:last-child) {
   display: none;
 }
+
 .navtoggle,
 .navtoggle.responsive {
   position: relative;
 }
+
 .navtoggle.responsive nav {
   padding: 24px 0 0;
 }
+
 .navtoggle li .icon {
   position: absolute;
   padding-right: 0;
@@ -181,188 +176,219 @@ nav > ul > li > a: active{
   top: 2px;
   font-size: 20px;
 }
+
 .navtoggle.responsive li {
   display: block;
   padding: 10px 0;
-  border-top: 1px solid rgba(255,127,80,0.5);
+  border-top: 1px solid rgba(255, 127, 80, 0.5);
 }
 
 .navtoggle.responsive li:last-child {
   padding: 0 0 10px;
 }
 
-
 /*containers, rows, columns*/
 main {
-padding-top: 56px;
+  padding-top: 56px;
 }
-
 
 .container {
   padding: 0 15px;
 }
 
 .row {
-  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+  margin: 25px 0;
+  /* 25px top and bottom, 0 left and right */
 }
 
-#work .row { padding-bottom: 25px; border-bottom: 1px solid #4a4a4a; }
+#work .row {
+  padding-bottom: 25px;
+  border-bottom: 1px solid #4a4a4a;
+}
+
 #work h2 {
   text-align: center;
 }
 
-
-
 /*footer*/
-#contact{
+#contact {
   text-align: center;
   background: black;
   padding: 30px 0px;
-  color:#ffffff
+  color: #ffffff
 }
+
 .social ul li {
-list-style-type: none;
-padding:0;
+  list-style-type: none;
+  padding: 0;
 }
+
 .social li {
-width: 50px;
-display: inline-block;
-margin: 10px;
-list-style-type: none;
-text-align: center;
-padding:none;
+  width: 50px;
+  display: inline-block;
+  margin: 10px;
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
 }
 
 /*hero*/
-
 #hero {
   background: bisque;
   padding-bottom: 10px;
 }
+
 #hero h1 {
-
   background-color: bisque;
-    padding: 10px 0;
-    display: inline-block;
-    width: 100%;
-text-align: center;
-
+  padding: 10px 0;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
 }
+
 /* ==============================
 Medium devices (640px and larger)
 ================================ */
-
-  @media only screen and (min-width: 640px) {
+@media only screen and (min-width: 640px) {
   header {
     text-align: unset;
     padding: 20px 0 13px;
   }
+
   main {
-      padding-top: 80px;
-    }
+    padding-top: 80px;
+  }
 
-#work h3{
-  margin-top: 0;
+  #work h3 {
+    margin-top: 0;
+  }
 
-
-}
   nav {
     width: auto;
     float: right
   }
-  .navtoggle li:not(:last-child) {
-  display: inline-block;
-}
 
-.navtoggle li:last-child {
-  display: none;
-}
-  nav > ul {
-  margin: 1em 0;
-}
-nav > ul > li {
+  .navtoggle li:not(:last-child) {
     display: inline-block;
   }
-#hero span {
-  display: block;
-  font-weight: 500;
 
-}
+  .navtoggle li:last-child {
+    display: none;
+  }
 
-.col-md-6 {
-  width: 50%;
-}
-[class*="col-"] {
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-}
+  nav>ul {
+    margin: 1em 0;
+  }
 
+  nav>ul>li {
+    display: inline-block;
+  }
 
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+  #hero span {
+    display: block;
+    font-weight: 500;
+  }
 
-#about-page h3 { margin-top: 0;}
+  .col-md-6 {
+    width: 50%;
+  }
 
-/* ==============================
+  [class*="col-"] {
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  #about-page h3 {
+    margin-top: 0;
+  }
+
+  /* ==============================
 Large devices (1024px or larger)
 ================================= */
-@media only screen and (min-width: 1024px) {
-}
-.container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  @media only screen and (min-width: 1024px) {}
+
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .button.contact {
+    background-color: transparent;
+    color: #ff7f50 !important;
+    text-transform: uppercase;
+    border: 2px solid #ff7f50;
+    width: 40%;
+    text-align: center;
+  }
+
+  .button.contact:hover {
+    background-color: #ff7f50;
+    color: #ffffff !important;
+  }
 }
 
-.button.contact {
-  background-color: transparent;
-  color: #ff7f50 !important;
-  text-transform: uppercase;
-  border: 2px solid #ff7f50;
-width: 40%;
-text-align: center;
-}
-.button.contact:hover {
-  background-color: #ff7f50;
-  color: #ffffff !important;
-}
-}
 /* X-Large Devices (1440px and and larger) */
 @media only screen and (min-width: 1440px) {
   body {
     font-size: 22px;
-
   }
+
   #hero {
     text-align: center;
-
   }
 }
+
 /*CSS Animations*/
 @keyframes color-change {
-  0% {fill: #edc655;}
-  50% {fill: #fcffad;}
-  100% {fill: #f76414;}
+  0% {
+    fill: #edc655;
+  }
+
+  50% {
+    fill: #fcffad;
+  }
+
+  100% {
+    fill: #f76414;
+  }
 }
 
 .sun {
   animation: 4s color-change infinite alternate linear;
 }
+
 @keyframes cloud-move {
-  from {transform: translate(0,50px);}
-  to {transform: translate(200px,50px);}
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
 }
+
 .cloud-front {
   animation: 30s cloud-move infinite alternate linear;
 }
+
 @keyframes cloud-move-reverse {
-  from {transform: translate(446px,48px);}
-  to {transform: translate(100px, 48px);}
+  from {
+    transform: translate(446px, 48px);
+  }
+
+  to {
+    transform: translate(100px, 48px);
+  }
 }
+
 .cloud-back {
   animation: 34s cloud-move-reverse infinite alternate linear;
 }
