--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,15 @@ h1 {
 h2 {
   font-size: 1.6em;
   font-weight: 700;
-  text-align: center;
 
-  color: black;
+  color: #ff7f50;
   padding: 1px;
 }
 
 h3 {
   font-size: 1.4em;
   font-weight: 700;
+  text-align: center;
 }
 
 h4 {
@@ -99,12 +99,14 @@ img {
   border: 2px solid #ff7f50;
   width: 100%;
   text-align: center;
+
 }
 
 .button.contact:hover {
   background-color: #ff7f50;
   color: #ffffff !important;
 }
+
 
 .caption {
   font-style: italic;
@@ -115,7 +117,7 @@ img {
 header {
   background-color: #e3e9e8;
   width: 100%;
-  padding: 10px 0;
+  padding: 10px 0 0;
   box-shadow: 4px 4px 5px 0 rgba(50, 50, 50, 0.25);
   position: fixed;
 }
@@ -129,7 +131,7 @@ header {
 }
 
 .logo {
-  max-width: 150px;
+  max-width: 190px;
 }
 
 nav>ul {
@@ -143,7 +145,7 @@ nav>ul>li>a {
   text-transform: uppercase;
   font-weight: 600;
   color: #ff7f50;
-  font-size: 1.4em;
+  font-size: 1em;
   text-decoration: none;
 }
 
@@ -155,6 +157,7 @@ nav>ul>li>a:focus {
 nav>ul>li>a:active {
   color: #2a665a;
 }
+
 
 .navtoggle li:not(:last-child) {
   display: none;
@@ -197,18 +200,17 @@ main {
 }
 
 .row {
-  margin: 25px 0;
+  margin: 30px 0;
   /* 25px top and bottom, 0 left and right */
 }
 
 #work .row {
-  padding-bottom: 25px;
+  padding-bottom: 30px;
   border-bottom: 1px solid #4a4a4a;
 }
 
 #work h2 {
   text-align: center;
-  color:
 }
 
 /*footer*/
@@ -222,7 +224,9 @@ main {
 #contact h2 {
   color: white;
 }
-
+.social ul{
+  padding: 0;
+}
 .social ul li {
   list-style-type: none;
   padding: 0;
@@ -257,12 +261,10 @@ Medium devices (640px and larger)
 @media only screen and (min-width: 640px) {
   header {
     text-align: unset;
-    padding: 20px 0 13px;
+    padding: 20px 0 3px;
   }
   img {
     width: 100%;
-    padding-left: 30px;
-    padding-right: 30px;
   }
   main {
     padding-top: 80px;
@@ -286,8 +288,8 @@ Medium devices (640px and larger)
   }
 
   nav>ul {
-    margin: 1em 0;
-  }
+    margin: 8px 0 0 0;
+    }
 
   nav>ul>li {
     display: inline-block;
@@ -330,8 +332,7 @@ Large devices (1024px or larger)
   }
   img {
     width: 100%;
-    padding-left: 30px;
-    padding-right: 30px;
+
   }
   .button.contact {
     background-color: transparent;
@@ -340,6 +341,7 @@ Large devices (1024px or larger)
     border: 2px solid #ff7f50;
     width: 40%;
     text-align: center;
+    margin: 20px 0 40px;
   }
 
   .button.contact:hover {
@@ -360,8 +362,7 @@ Large devices (1024px or larger)
 }
 img {
   width: 100%;
-  padding-left: 30px;
-  padding-right: 30px;
+
 }
 /*CSS Animations*/
 @keyframes color-change {
